--- a/DocClassifier_Base.ipynb
+++ b/DocClassifier_Base.ipynb
@@ -17,8 +17,7 @@
      "iopub.status.idle": "2024-07-10T07:25:34.590724Z",
      "shell.execute_reply": "2024-07-10T07:25:34.589812Z",
      "shell.execute_reply.started": "2024-07-10T07:25:34.584806Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -52,8 +51,7 @@
      "iopub.status.idle": "2024-07-10T07:15:05.190388Z",
      "shell.execute_reply": "2024-07-10T07:15:05.189460Z",
      "shell.execute_reply.started": "2024-07-10T07:15:04.609291Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -184,8 +182,7 @@
      "iopub.status.idle": "2024-07-10T07:15:05.198217Z",
      "shell.execute_reply": "2024-07-10T07:15:05.197352Z",
      "shell.execute_reply.started": "2024-07-10T07:15:05.193785Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -230,8 +227,7 @@
      "iopub.status.idle": "2024-07-10T07:15:05.210675Z",
      "shell.execute_reply": "2024-07-10T07:15:05.209796Z",
      "shell.execute_reply.started": "2024-07-10T07:15:05.200495Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -298,8 +294,7 @@
      "iopub.status.idle": "2024-07-10T07:15:07.001487Z",
      "shell.execute_reply": "2024-07-10T07:15:07.000717Z",
      "shell.execute_reply.started": "2024-07-10T07:15:05.212121Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -345,8 +340,7 @@
      "iopub.status.idle": "2024-07-10T07:15:07.141528Z",
      "shell.execute_reply": "2024-07-10T07:15:07.140744Z",
      "shell.execute_reply.started": "2024-07-10T07:15:07.002752Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -374,8 +368,7 @@
      "iopub.status.idle": "2024-07-10T09:15:46.570649Z",
      "shell.execute_reply": "2024-07-10T09:15:46.569684Z",
      "shell.execute_reply.started": "2024-07-10T08:46:23.882763Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -459,8 +452,7 @@
      "iopub.status.idle": "2024-07-10T09:23:11.725264Z",
      "shell.execute_reply": "2024-07-10T09:23:11.724312Z",
      "shell.execute_reply.started": "2024-07-10T09:23:05.074268Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -514,8 +506,7 @@
      "iopub.status.idle": "2024-07-10T09:23:27.574128Z",
      "shell.execute_reply": "2024-07-10T09:23:27.572937Z",
      "shell.execute_reply.started": "2024-07-10T09:23:27.017341Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -623,7 +614,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -637,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
