--- a/WordClassifier_Base.ipynb
+++ b/WordClassifier_Base.ipynb
@@ -1973,7 +1973,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "# !pip install tensorflow tensorflow_addons livelossplot",
+   "source": "# !pip install tensorflow livelossplot",
    "id": "1c75b229a0d43fe7",
    "outputs": [],
    "execution_count": 339
@@ -1981,7 +1981,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "!mkdir logs",
+   "source": [
+    "!mkdir logs\n",
+    "!mkdir resources"
+   ],
    "id": "ef491d864e507f4b",
    "outputs": [
     {
